--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.2.2
   firebase_storage: ^11.0.11
   cloud_firestore: ^4.3.2
+  flutter_picker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
