--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_storage: ^11.0.11
   cloud_firestore: ^4.3.2
   flutter_picker: ^2.1.0
+  flutter_native_splash: ^2.1.3+1
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +35,18 @@ flutter_icons:
   min_sdk_android: 21
   adaptive_icon_background: '#FFF422'
   adaptive_icon_foreground: "assets/icon/icon.png"
+
+flutter_native_splash:
+  color: '#DBEBFF'
+  image: 'assets/splash/splash.png'
+  color_dark: '#DBEBFF'
+  image_dark: 'assets/splash/splash.png'
+  fullscreen: true
+  android_12:
+    icon_background_color: '#DBEBFF'
+    image: 'assets/splash/splash.png'
+    icon_background_color_dark: '#DBEBFF'
+    image_dark: 'assets/splash/splash.png'
 
 flutter:
 
