--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cloud_firestore: ^4.3.2
   flutter_picker: ^2.1.0
   flutter_native_splash: ^2.1.3+1
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
