--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_picker: ^2.1.0
   flutter_native_splash: ^2.1.3+1
   flutter_easyloading: ^3.0.5
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
