add1.0: 目的の文字列で写真の使用について十分に説明を変更した

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -27,11 +27,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>登録のためにカメラの許可が必要となります。</string>
+	<string>プロフィールの登録のためにカメラの許可が必要となります。</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>登録のためにMicroPhoneの許可が必要となります。</string>
+	<string>プロフィールの登録のためにMicroPhoneの許可が必要となります。</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>登録のためにアルバムの許可が必要となります。</string>
+	<string>プロフィールの登録のためにアルバムの許可が必要となります。。</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
