--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_native_splash: ^2.1.3+1
   flutter_easyloading: ^3.0.5
   flutter_secure_storage: ^8.0.0
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
