--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   google_fonts: ^4.0.3
   flutter_rating_bar: ^4.0.1
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
