--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,4 +57,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/empty.png
-    - assets/header/header.jpg
+    - assets/header/
