--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   url_launcher: ^6.1.7
   flutter_riverpod: ^2.1.1
   freezed_annotation: ^2.4.1
+  flutter_gen: ^5.3.1
 
 dev_dependencies:
   flutter_test:
@@ -32,7 +33,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.11.0
   freezed: ^2.4.1
-  build_runner: ^2.0.0
+  build_runner: ^2.4.6
+  flutter_gen_runner: ^5.3.1
 
 flutter_icons:
   android: false
@@ -56,8 +58,8 @@ flutter_native_splash:
     image_dark: 'assets/splash/splash.png'
 
 flutter:
-
   uses-material-design: true
+  generate: true
   assets:
-    - assets/images/
     - assets/header/
+    - assets/images/
