--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
   freezed: ^2.4.1
   build_runner: ^2.4.6
   flutter_gen_runner: ^5.3.1
+  import_sorter: ^4.6.0
 
 flutter_icons:
   android: false
