--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   google_fonts: ^4.0.3
   image_picker: ^0.8.6+1
   intl: ^0.18.0
+  loading_animation_widget: ^1.2.0+4
   url_launcher: ^6.1.7
 
 dev_dependencies:
