--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   image_picker: ^0.8.6+1
   intl: ^0.18.0
   loading_animation_widget: ^1.2.0+4
+  shared_preferences: ^2.2.0
   url_launcher: ^6.1.7
 
 dev_dependencies:
