--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_gen: ^5.3.1
+  flutter_hooks: ^0.18.3
   flutter_native_splash: ^2.1.3+1
   flutter_picker: ^2.1.0
   flutter_rating_bar: ^4.0.1
@@ -23,6 +24,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   freezed_annotation: ^2.4.1
   google_fonts: ^4.0.3
+  hooks_riverpod: ^2.3.6
   image_picker: ^0.8.6+1
   intl: ^0.18.0
   loading_animation_widget: ^1.2.0+4
