--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,62 +1,28 @@
-name: Bug report
-description: Create a report to help us improve
+name: Hot Bug Report
+description: File a bug report
 title: "[Bug]: "
-labels: [ "bug", "triage" ]
-
+labels: ["bug", "triage"]
+assignees:
+  - iseruuuuu
 body:
-  - type: textarea
-    id: describe
+  - type: markdown
     attributes:
-      label: Describe the bug
-      description: A clear and concise description of what the bug is.
-    validations:
-      required: true
-  - type: textarea
-    id: screenshots
-    attributes:
-      label: Screenshots
-      description: If applicable, add screenshots to help explain your problem.
       value: |
-        <img src="" width="320" />
-        <video src="" width="320" />
+        Thanks for taking the time to fill out this bug report!
+  - type: input
+    id: contact
+    attributes:
+      label: Contact Details
+      description: How can we get in touch with you if we need more info?
+      placeholder: ex. email@example.com
     validations:
       required: false
   - type: textarea
-    id: reproduce
+    id: what-happened
     attributes:
-      label: To Reproduce
-      description: Steps to reproduce the behavior
-      value: |
-        1. Go to '...'
-        2. Click on '....'
-        3. Scroll down to '....'
-        4. See error
+      label: What happened?
+      description: Also tell us, what did you expect to happen?
+      placeholder: Tell us what you see!
+      value: "A bug happened!"
     validations:
       required: true
-  - type: textarea
-    id: expected
-    attributes:
-      label: Expected behavior
-      description: A clear and concise description of what you expected to happen.
-    validations:
-      required: true
-  - type: textarea
-    id: env
-    attributes:
-      label: Environment
-      description: Please provide details about your environment.
-      value: |
-        - Device: [e.g. iPhone6]
-        - OS: [e.g. iOS 8.1]
-        - Browser: [e.g. Chrome, Safari]
-        - Version: [e.g. 1.0.0+1]
-        - Commit SHA: [e.g. 486ba7defaf1bd6b0deb87db2118c328e5baf529]
-    validations:
-      required: true
-  - type: textarea
-    id: additional
-    attributes:
-      label: Additional context
-      description: Add any other context about the problem here.
-    validations:
-      required: false
