--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -4,31 +4,24 @@ title: "[Feature Request]: "
 labels: [ "feature", "triage" ]
 
 body:
-  - type: textarea
-    id: describe
+  - type: markdown
     attributes:
-      label: Is your feature request related to a problem? Please describe
-      description: A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]
-    validations:
-      required: true
-  - type: textarea
-    id: solution
+      value: |
+        Thanks for taking the time to fill out this feature request!
+  - type: input
+    id: contact
     attributes:
-      label: Describe the solution you'd like
-      description: A clear and concise description of what you want to happen.
-    validations:
-      required: true
-  - type: textarea
-    id: alternatives
-    attributes:
-      label: Describe alternatives you've considered
-      description: A clear and concise description of any alternative solutions or features you've considered.
+      label: Contact Details
+      description: How can we get in touch with you if we need more info?
+      placeholder: ex. email@example.com
     validations:
       required: false
   - type: textarea
-    id: additional
+    id: what-happened
     attributes:
-      label: Additional context
-      description: Add any other context about the problem here.
+      label: What happened?
+      description: Also tell us, what did you expect to happen?
+      placeholder: Tell us what you see!
+      value: "A feature happened!"
     validations:
-      required: false
+      required: true
