add: mockitoを追加しました。

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   image_picker: ^0.8.6+1
   intl: ^0.18.0
   loading_animation_widget: ^1.2.0+4
+  mockito: ^5.4.2
   shared_preferences: ^2.2.0
   url_launcher: ^6.1.7
 
