--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,26 +1,49 @@
-name: Test
+name: test
 
 on:
-  push:
-    branches: [ main ]
+  workflow_dispatch:
   pull_request:
-    branches: [ main ]
+    types: [opened, synchronize]
+  push:
+    branches:
+      - main
+
+env:
+  FLUTTER_VERSION: '2.5.3'
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v2
         with:
-          python-version: 3.8
+          path: /opt/hostedtoolcache/flutter
+          key: ${{ runner.OS }}-flutter-install-cache-${{ env.FLUTTER_VERSION }}
+
+      - name: Install Flutter
+        uses: subosito/flutter-action@v1
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Test with pytest
+          flutter pub get
+
+      - name: Test
         run: |
-          pip install pytest
-          pytest
+          flutter test --machine > test_report.log
+
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: 'flutter test'
+          path: 'test_report.log'
+          reporter: 'flutter-json'
+          fail-on-error: 'false'
