--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,14 +1,12 @@
-name: Flutter Test CI
+name: test
 
 on:
   push:
-    branches: [ main ]
-    paths:
-    - '**.dart'
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
-    paths:
-    - '**.dart'
+    branches:
+      - main
 
 jobs:
   test:
@@ -18,13 +16,12 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
       
     - name: Setup Flutter
       uses: subosito/flutter-action@v1
       with:
-        flutter-version: 'latest'  # You can specify a version if needed
+        flutter-version: 'stable'
       
     - name: Install dependencies
       run: flutter pub get
