--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,13 @@ dependencies:
   image_picker: ^0.8.6+1
   intl: ^0.18.0
   loading_animation_widget: ^1.2.0+4
-  mockito: ^5.4.2
+  riverpod_annotation: ^2.1.1
   shared_preferences: ^2.2.0
   url_launcher: ^6.1.7
+
+dependency_overrides:
+  analyzer: 6.0.0
+  cli_util: ^0.4.0
 
 dev_dependencies:
   build_runner: ^2.4.6
@@ -42,6 +46,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.4.1
+  mockito: ^5.4.2
+  riverpod_generator: ^2.2.5
 
 flutter_icons:
   android: false
