--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,7 +4,7 @@ analyzer:
     missing_required_param: warning
     missing_return: warning
   exclude:
-    - '**/l10n/*.dart'
+    - '**/gen/*.dart'
   language:
     strict-inference: true
     strict-raw-types: true
