--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   flutter_riverpod: ^2.2.0
   flutter_secure_storage: ^8.0.0
+  font_awesome_flutter: ^10.5.0
   freezed_annotation: ^2.4.1
   google_fonts: ^4.0.3
   hooks_riverpod: ^2.1.3
@@ -31,7 +32,7 @@ dependencies:
   intl: ^0.18.0
   loading_animation_widget: ^1.2.0+4
   shared_preferences: ^2.2.0
-  url_launcher: ^6.1.7
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   build_runner: ^2.4.6
