--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -32,6 +32,12 @@
 	<string>プロフィールの登録のためにMicroPhoneの許可が必要となります。</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>プロフィールの登録のためにアルバムの許可が必要となります。。</string>
+	<key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>items</string>
+        <string>twitter</string>
+        <string>instagram</string>
+    </array>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
