--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   screenshot: ^2.1.0
   share_plus: ^7.1.0
   shared_preferences: ^2.2.0
+  skeletonizer: ^0.7.0
   url_launcher: ^6.1.12
 
 dev_dependencies:
