fvm を追加しました。

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          flutter pub get
+         fvm flutter pub get
 
       - name: Test
         run: |
