--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cached_network_image: ^3.2.3
   cloud_firestore: ^4.3.2
   cupertino_icons: ^1.0.2
+  easy_refresh: ^3.3.2+1
   firebase_auth: ^4.2.2
   firebase_core: ^2.5.0
   firebase_storage: ^11.0.11
