--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   image_picker: ^0.8.6+1
   intl: ^0.18.0
   loading_animation_widget: ^1.2.0+4
+  panara_dialogs: ^0.1.4
   path_provider: ^2.1.0
   screenshot: ^2.1.0
   share_plus: ^7.1.0
