--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,10 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   font_awesome_flutter: ^10.5.0
   freezed_annotation: ^2.4.1
+  geolocator: ^10.0.1
   google_fonts: ^4.0.3
   hooks_riverpod: ^2.1.3
+  http: ^1.1.0
   image_picker: ^0.8.6+1
   intl: ^0.18.0
   loading_animation_widget: ^1.2.0+4
